﻿+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.5.2c1?
=============================

*Release date: XX-XXX-XXXX*

Core and builtins
-----------------

- Bug #1517: Possible segfault in lookup().

- Issue #1638: %zd configure test fails on Linux.

- Issue #1553: An erroneous __length_hint__ can make list() raise a
  SystemError.

- Issue #1521: On 64bit platforms, using PyArgs_ParseTuple with the t# of w#
  format code incorrectly truncated the length to an int, even when
  PY_SSIZE_T_CLEAN is set.  The str.decode method used to return incorrect
  results with huge strings.

- Issue #1445: Fix a SystemError when accessing the ``cell_contents`` 
  attribute of an empty cell object.

- Issue #1265: Fix a problem with sys.settrace, if the tracing function uses a
  generator expression when at the same time the executed code is closing a
  paused generator.

- Issue 1704621: Fix segfaults in list_repeat() and list_inplace_repeat().

- Issue #1147: Generators were not raising a DeprecationWarning when a string
  was passed into throw().

- Patch #1031213: Decode source line in SyntaxErrors back to its original source
  encoding.

- Patch #1673759: add a missing overflow check when formatting floats
  with %G.

- Patch #1733960: Allow T_LONGLONG to accept ints.

- Prevent expandtabs() on string and unicode objects from causing a segfault
  when a large width is passed on 32-bit platforms.

- Bug #1733488: Fix compilation of bufferobject.c on AIX.


Library
-------

- Issue #1182: many arithmetic bugs in the decimal module have been
  fixed, and the decimal module has been updated to comply with the
  latest IBM Decimal Arithmetic specification (version 1.66) and
  testsuite (version 2.57).  (Backported from Python 2.6a0.)

- Patch #1637: fix urlparse for URLs like 'http://x.com?arg=/foo'.

- Issue #1735: TarFile.extractall() now correctly sets directory permissions
  and times.
